<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nama -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">
            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Harga -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peace"
            android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/etHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Deskripsi -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/etDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Spinner Kategori -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
        <Spinner
            android:id="@+id/spinnerKategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <!-- Spinner Status -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"/>

        <!-- Pilih gambar -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/selectImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>


        <!-- Tombol Simpan -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>