<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER BACKGROUND -->
    <View
        android:id="@+id/headerBg"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/cat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- PROFILE IMAGE -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/miku"
        android:scaleType="centerCrop"
        android:layout_marginTop="-75dp"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:layout_constraintTop_toBottomOf="@id/headerBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp"/>

    <!-- NAME -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_developer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EMAIL -->
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_developer"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

    <!-- MENU CARD -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        app:cardElevation="8dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/setting_fragment"
                android:padding="18dp"
                android:textSize="15sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#212121"/>

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_fragment"
                android:padding="18dp"
                android:textSize="15sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#212121"/>

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_fragment"
                android:padding="18dp"
                android:textSize="15sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- LOGOUT -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:backgroundTint="#E53935"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/cardMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>